--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                     <input id="rows" min="3" type="number" class="input" >
                 </div>
                 <div class="label">
-                    <label for="columns">Number of Rows</label>
+                    <label for="columns">Number of columns</label>
                     <input id="columns" min="3" type="number" class="input" >
                 </div>
                 <div class="label">
-                    <label for="win-number">Number of Rows</label>
+                    <label for="win-number">Number of WinBlocks</label>
                     <input id="win-number" min="3" type="number" class="input" >
                 </div>
             </div>
