--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                     <input id="win-number" min="3" type="number" class="input" >
                 </div>
             </div>
-            <button type="submit" class="submit-btn">Submit</button>
+            <button type="submit" class="submit-btn">Start Game</button>
             <h4 class="current-player"></h4>
             <h4 class="result">Result: </h4>
         </div>
         <div id="xo-game" class="xo-game">
         </div>
 
-        <button class="restart">New Game</button>
+        <button class="restart" style="display: none;">New Game</button>
     </container>
 
     <script src="index.js"></script>
