--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <button type="submit" class="submit-btn">Start Game</button>
             <h4 class="current-player"></h4>
-            <h4 class="result">Result: </h4>
+            <h4 class="result" style="display: none;">Result: </h4>
         </div>
         <div id="xo-game" class="xo-game">
         </div>
